Sets domianname in DHCPOptions

--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -483,7 +483,16 @@
         "DHCPOptions": {
             "Type": "AWS::EC2::DHCPOptions",
             "Properties": {
-                "DomainNameServers": [
+            "DomainName": {
+                "Fn::Join": [
+                    "", [
+                        {
+                            "Ref": "AWS::Region"
+                        }, ".compute.internal"
+                    ]
+                ]
+            },
+            "DomainNameServers": [
                     "AmazonProvidedDNS"
                 ]
             }
