--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -1,6 +1,6 @@
 {
     "AWSTemplateFormatVersion": "2010-09-09",
-    "Description": "This template creates a Multi-AZ, multi-subnet VPC infrastructure with managed NAT gateways in the public subnet for each Availability Zone. You can also create additional private subnets with dedicated custom network access control lists (ACLs). If you deploy the Quick Start in a region that doesn’t support NAT gateways, NAT instances are deployed instead. **WARNING** This template creates AWS resources. You will be billed for the AWS resources used if you create a stack from this template. QS(0027)",
+    "Description": "This template creates a Multi-AZ, multi-subnet VPC infrastructure with managed NAT gateways in the public subnet for each Availability Zone. You can also create additional private subnets with dedicated custom network access control lists (ACLs). If you deploy the Quick Start in a region that doesn't support NAT gateways, NAT instances are deployed instead. **WARNING** This template creates AWS resources. You will be billed for the AWS resources used if you create a stack from this template. QS(0027)",
     "Metadata": {
         "AWS::CloudFormation::Interface": {
             "ParameterGroups": [
@@ -483,16 +483,18 @@
         "DHCPOptions": {
             "Type": "AWS::EC2::DHCPOptions",
             "Properties": {
-            "DomainName": {
-                "Fn::Join": [
-                    "", [
-                        {
-                            "Ref": "AWS::Region"
-                        }, ".compute.internal"
+                "DomainName": {
+                    "Fn::Join": [
+                        "",
+                        [
+                            {
+                                "Ref": "AWS::Region"
+                            },
+                            ".compute.internal"
+                        ]
                     ]
-                ]
-            },
-            "DomainNameServers": [
+                },
+                "DomainNameServers": [
                     "AmazonProvidedDNS"
                 ]
             }
