--- a/ci/config.yml
+++ b/ci/config.yml
@@ -9,8 +9,10 @@ global:
     - ap-south-1
     - ap-southeast-1
     - ap-southeast-2
+    - ca-central-1
     - eu-central-1
     - eu-west-1
+    - eu-west-2
     - sa-east-1
     - us-east-1
     - us-east-2
