adding VPC Endpoint resource to output section

--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -2408,6 +2408,13 @@
                 "Ref": "PublicSubnet4"
             }
         },
+        "VPCEndpoint": {
+            "Condition": "VPCEndpointCondition",
+            "Description": "VPC Endpoint",
+            "Value": {
+                "Ref": "S3Endpoint"
+            }
+        },
         "VPCCIDR": {
             "Value": {
                 "Ref": "VPCCIDR"
