--- a/ci/config.yml
+++ b/ci/config.yml
@@ -1,7 +1,6 @@
 global:
   marketplace-ami: false
   owner: quickstart@amazon.com
-  prod-s3-path: 's3://quickstart-reference/aws/vpc'
   qsname: quickstart-aws-vpc
   regions:
     - ap-northeast-1
@@ -23,8 +22,39 @@ tests:
   defaults:
     parameter_input: aws-vpc-defaults.json
     template_file: aws-vpc.template
-  complete-us-east-1:
+  complete:
     parameter_input: aws-vpc-complete.json
+    template_file: aws-vpc.template
+  public:
+    parameter_input: aws-vpc-public.json
+    template_file: aws-vpc.template
+  3az-eu-west-1:
+    parameter_input: aws-vpc-3az.json
+    regions:
+      - eu-west-1
+    template_file: aws-vpc.template
+  3az-complete-us-east-2:
+    parameter_input: aws-vpc-3az-complete.json
+    regions:
+      - us-east-2
+    template_file: aws-vpc.template
+  3az-public-us-west-2:
+    parameter_input: aws-vpc-3az-public.json
+    regions:
+      - us-west-2
+    template_file: aws-vpc.template
+  4az-us-east-1:
+    parameter_input: aws-vpc-4az.json
+    regions:
+      - us-east-1
+    template_file: aws-vpc.template
+  4az-complete-us-east-1:
+    parameter_input: aws-vpc-4az-complete.json
+    regions:
+      - us-east-1
+    template_file: aws-vpc.template
+  4az-public-us-east-1:
+    parameter_input: aws-vpc-4az-public.json
     regions:
       - us-east-1
     template_file: aws-vpc.template
