added export to VPCID output

--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -2518,7 +2518,8 @@
             "Value": {
                 "Ref": "VPC"
             },
-            "Description": "VPC ID"
+            "Description": "VPC ID",
+	    "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-VPCID" }}
         }
     }
 }
