--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -2349,7 +2349,8 @@
             "Description": "Private subnet 1A ID in Availability Zone 1",
             "Value": {
                 "Ref": "PrivateSubnet1A"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet1AID" }}
         },
         "PrivateSubnet1BCIDR": {
             "Condition": "AdditionalPrivateSubnetsCondition",
@@ -2363,7 +2364,8 @@
             "Description": "Private subnet 1B ID in Availability Zone 1",
             "Value": {
                 "Ref": "PrivateSubnet1B"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet1BID" }}
         },
         "PrivateSubnet2ACIDR": {
             "Condition": "PrivateSubnetsCondition",
@@ -2377,7 +2379,8 @@
             "Description": "Private subnet 2A ID in Availability Zone 2",
             "Value": {
                 "Ref": "PrivateSubnet2A"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet2AID" }}
         },
         "PrivateSubnet2BCIDR": {
             "Condition": "AdditionalPrivateSubnetsCondition",
@@ -2391,7 +2394,8 @@
             "Description": "Private subnet 2B ID in Availability Zone 2",
             "Value": {
                 "Ref": "PrivateSubnet2B"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet2BID" }}
         },
         "PrivateSubnet3ACIDR": {
             "Condition": "PrivateSubnets&3AZCondition",
@@ -2405,7 +2409,8 @@
             "Description": "Private subnet 3A ID in Availability Zone 3",
             "Value": {
                 "Ref": "PrivateSubnet3A"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet3AID" }}
         },
         "PrivateSubnet3BCIDR": {
             "Condition": "AdditionalPrivateSubnets&3AZCondition",
@@ -2419,7 +2424,8 @@
             "Description": "Private subnet 3B ID in Availability Zone 3",
             "Value": {
                 "Ref": "PrivateSubnet3B"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet3BID" }}
         },
         "PrivateSubnet4ACIDR": {
             "Condition": "PrivateSubnets&4AZCondition",
@@ -2433,7 +2439,8 @@
             "Description": "Private subnet 4A ID in Availability Zone 4",
             "Value": {
                 "Ref": "PrivateSubnet4A"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet4AID" }}
         },
         "PrivateSubnet4BCIDR": {
             "Condition": "AdditionalPrivateSubnets&4AZCondition",
@@ -2447,7 +2454,8 @@
             "Description": "Private subnet 4B ID in Availability Zone 4",
             "Value": {
                 "Ref": "PrivateSubnet4B"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet4BID" }}
         },
         "PublicSubnet1CIDR": {
             "Description": "Public subnet 1 CIDR in Availability Zone 1",
@@ -2459,7 +2467,8 @@
             "Description": "Public subnet 1 ID in Availability Zone 1",
             "Value": {
                 "Ref": "PublicSubnet1"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet1ID" }}
         },
         "PublicSubnet2CIDR": {
             "Description": "Public subnet 2 CIDR in Availability Zone 2",
@@ -2471,7 +2480,8 @@
             "Description": "Public subnet 2 ID in Availability Zone 2",
             "Value": {
                 "Ref": "PublicSubnet2"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet2ID" }}
         },
         "PublicSubnet3CIDR": {
             "Condition": "3AZCondition",
@@ -2485,7 +2495,8 @@
             "Description": "Public subnet 3 ID in Availability Zone 3",
             "Value": {
                 "Ref": "PublicSubnet3"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet3ID" }}
         },
         "PublicSubnet4CIDR": {
             "Condition": "4AZCondition",
@@ -2499,7 +2510,8 @@
             "Description": "Public subnet 4 ID in Availability Zone 4",
             "Value": {
                 "Ref": "PublicSubnet4"
-            }
+            },
+            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet4ID" }}
         },
         "S3VPCEndpoint": {
             "Condition": "S3VPCEndpointCondition",
