Pretty JSON.sublimeified

--- a/templates/aws-vpc.template
+++ b/templates/aws-vpc.template
@@ -2350,7 +2350,11 @@
             "Value": {
                 "Ref": "PrivateSubnet1A"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet1AID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet1AID"
+                }
+            }
         },
         "PrivateSubnet1BCIDR": {
             "Condition": "AdditionalPrivateSubnetsCondition",
@@ -2365,7 +2369,11 @@
             "Value": {
                 "Ref": "PrivateSubnet1B"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet1BID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet1BID"
+                }
+            }
         },
         "PrivateSubnet2ACIDR": {
             "Condition": "PrivateSubnetsCondition",
@@ -2380,7 +2388,11 @@
             "Value": {
                 "Ref": "PrivateSubnet2A"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet2AID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet2AID"
+                }
+            }
         },
         "PrivateSubnet2BCIDR": {
             "Condition": "AdditionalPrivateSubnetsCondition",
@@ -2395,7 +2407,11 @@
             "Value": {
                 "Ref": "PrivateSubnet2B"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet2BID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet2BID"
+                }
+            }
         },
         "PrivateSubnet3ACIDR": {
             "Condition": "PrivateSubnets&3AZCondition",
@@ -2410,7 +2426,11 @@
             "Value": {
                 "Ref": "PrivateSubnet3A"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet3AID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet3AID"
+                }
+            }
         },
         "PrivateSubnet3BCIDR": {
             "Condition": "AdditionalPrivateSubnets&3AZCondition",
@@ -2425,7 +2445,11 @@
             "Value": {
                 "Ref": "PrivateSubnet3B"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet3BID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet3BID"
+                }
+            }
         },
         "PrivateSubnet4ACIDR": {
             "Condition": "PrivateSubnets&4AZCondition",
@@ -2440,7 +2464,11 @@
             "Value": {
                 "Ref": "PrivateSubnet4A"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet4AID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet4AID"
+                }
+            }
         },
         "PrivateSubnet4BCIDR": {
             "Condition": "AdditionalPrivateSubnets&4AZCondition",
@@ -2455,7 +2483,11 @@
             "Value": {
                 "Ref": "PrivateSubnet4B"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet4BID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet4BID"
+                }
+            }
         },
         "PublicSubnet1CIDR": {
             "Description": "Public subnet 1 CIDR in Availability Zone 1",
@@ -2468,7 +2500,11 @@
             "Value": {
                 "Ref": "PublicSubnet1"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet1ID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PublicSubnet1ID"
+                }
+            }
         },
         "PublicSubnet2CIDR": {
             "Description": "Public subnet 2 CIDR in Availability Zone 2",
@@ -2481,7 +2517,11 @@
             "Value": {
                 "Ref": "PublicSubnet2"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet2ID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PublicSubnet2ID"
+                }
+            }
         },
         "PublicSubnet3CIDR": {
             "Condition": "3AZCondition",
@@ -2496,7 +2536,11 @@
             "Value": {
                 "Ref": "PublicSubnet3"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet3ID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PublicSubnet3ID"
+                }
+            }
         },
         "PublicSubnet4CIDR": {
             "Condition": "4AZCondition",
@@ -2511,7 +2555,11 @@
             "Value": {
                 "Ref": "PublicSubnet4"
             },
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnet4ID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PublicSubnet4ID"
+                }
+            }
         },
         "S3VPCEndpoint": {
             "Condition": "S3VPCEndpointCondition",
@@ -2520,84 +2568,132 @@
                 "Ref": "S3VPCEndpoint"
             }
         },
-     	"PrivateSubnet1ARouteTable": 
-			{
-				"Value" : {"Ref": "PrivateSubnet1ARouteTable" },
-				"Description": "Private Subnet 1A Route Table",
-				"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet1ARouteTable" }}
-			},
-		"PrivateSubnet2ARouteTable": 
-			{
-				"Value" : {"Ref": "PrivateSubnet2ARouteTable" },
-				"Description": "Private Subnet 2A Route Table",
-				"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet2ARouteTable" }}
-			},
-		"PrivateSubnet3ARouteTable": 
-			{
-				"Condition": "PrivateSubnets&3AZCondition",
-				"Value" : {"Ref": "PrivateSubnet3ARouteTable" },
-				"Description": "Private Subnet 3A Route Table",
-				"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet3ARouteTable" }}
-			},
-		"PrivateSubnet4ARouteTable": 
-			{
-				"Condition": "PrivateSubnets&4AZCondition",
-				"Value" : {"Ref": "PrivateSubnet4ARouteTable" },
-				"Description": "Private Subnet 4A Route Table",
-				"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet4ARouteTable" }}
-			},				
-		"PrivateSubnet1BRouteTable": 
-			{
-				"Condition": "AdditionalPrivateSubnetsCondition",
-				"Value" : {"Ref": "PrivateSubnet1BRouteTable" },
-				"Description": "Private Subnet 1B Route Table",
-				"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet1BRouteTable" }}
-			},
-		"PrivateSubnet2BRouteTable": 
-			{
-				"Condition": "AdditionalPrivateSubnetsCondition",
-				"Value" : {"Ref": "PrivateSubnet2BRouteTable" },
-				"Description": "Private Subnet 2B Route Table",
-				"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet2BRouteTable" }}
-			},
-		"PrivateSubnet3BRouteTable": 
-			{
-				"Condition": "AdditionalPrivateSubnets&3AZCondition",
-				"Value" : {"Ref": "PrivateSubnet3BRouteTable" },
-				"Description": "Private Subnet 3B Route Table",
-				"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet3BRouteTable" }}
-			},	
-  		"PrivateSubnet4BRouteTable": 
-			{
-				"Condition": "AdditionalPrivateSubnets&4AZCondition",
-				"Value" : {"Ref": "PrivateSubnet4BRouteTable" },
-				"Description": "Private Subnet 4B Route Table",
-				"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnet4BRouteTable" }}
-			},           
-                "PublicSubnetRouteTable": {
-                        "Value": {
-                                "Ref": "PublicSubnetRouteTable"
-                        },
-                        "Description": "Public Subnet Route Table",
-                        "Export": {
-                                "Name": {
-                                        "Fn::Sub": "${AWS::StackName}-PublicSubnetRouteTable"
-                                }
-                        }
-                },
+        "PrivateSubnet1ARouteTable": {
+            "Value": {
+                "Ref": "PrivateSubnet1ARouteTable"
+            },
+            "Description": "Private Subnet 1A Route Table",
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet1ARouteTable"
+                }
+            }
+        },
+        "PrivateSubnet2ARouteTable": {
+            "Value": {
+                "Ref": "PrivateSubnet2ARouteTable"
+            },
+            "Description": "Private Subnet 2A Route Table",
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet2ARouteTable"
+                }
+            }
+        },
+        "PrivateSubnet3ARouteTable": {
+            "Condition": "PrivateSubnets&3AZCondition",
+            "Value": {
+                "Ref": "PrivateSubnet3ARouteTable"
+            },
+            "Description": "Private Subnet 3A Route Table",
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet3ARouteTable"
+                }
+            }
+        },
+        "PrivateSubnet4ARouteTable": {
+            "Condition": "PrivateSubnets&4AZCondition",
+            "Value": {
+                "Ref": "PrivateSubnet4ARouteTable"
+            },
+            "Description": "Private Subnet 4A Route Table",
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet4ARouteTable"
+                }
+            }
+        },
+        "PrivateSubnet1BRouteTable": {
+            "Condition": "AdditionalPrivateSubnetsCondition",
+            "Value": {
+                "Ref": "PrivateSubnet1BRouteTable"
+            },
+            "Description": "Private Subnet 1B Route Table",
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet1BRouteTable"
+                }
+            }
+        },
+        "PrivateSubnet2BRouteTable": {
+            "Condition": "AdditionalPrivateSubnetsCondition",
+            "Value": {
+                "Ref": "PrivateSubnet2BRouteTable"
+            },
+            "Description": "Private Subnet 2B Route Table",
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet2BRouteTable"
+                }
+            }
+        },
+        "PrivateSubnet3BRouteTable": {
+            "Condition": "AdditionalPrivateSubnets&3AZCondition",
+            "Value": {
+                "Ref": "PrivateSubnet3BRouteTable"
+            },
+            "Description": "Private Subnet 3B Route Table",
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet3BRouteTable"
+                }
+            }
+        },
+        "PrivateSubnet4BRouteTable": {
+            "Condition": "AdditionalPrivateSubnets&4AZCondition",
+            "Value": {
+                "Ref": "PrivateSubnet4BRouteTable"
+            },
+            "Description": "Private Subnet 4B Route Table",
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PrivateSubnet4BRouteTable"
+                }
+            }
+        },
+        "PublicSubnetRouteTable": {
+            "Value": {
+                "Ref": "PublicSubnetRouteTable"
+            },
+            "Description": "Public Subnet Route Table",
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-PublicSubnetRouteTable"
+                }
+            }
+        },
         "VPCCIDR": {
             "Value": {
                 "Ref": "VPCCIDR"
             },
             "Description": "VPC CIDR",
-            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-VPCCIDR" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-VPCCIDR"
+                }
+            }
         },
         "VPCID": {
             "Value": {
                 "Ref": "VPC"
             },
             "Description": "VPC ID",
-	        "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-VPCID" }}
+            "Export": {
+                "Name": {
+                    "Fn::Sub": "${AWS::StackName}-VPCID"
+                }
+            }
         }
     }
 }
